# caneta

./: .env  .gitignore  .gitmodules  CMakeLists.txt  README.md  esp32.cmake
caneta-macos/: CMakeLists.txt
caneta-macos/src/: key_logger.cpp  key_logger.h  main.cpp
libraries/: pico-sdk  pio-usb  tinyusb
libraries/caneta-c/: CMakeLists.txt  library.properties
libraries/caneta-c/src/: caneta.c  caneta.h
libraries/caneta-esp32/: CMakeLists.txt  library.properties
libraries/caneta-esp32/examples/caneta-esp32/: caneta-esp32.ino
libraries/caneta-esp32/src/: CanetaBluetooth.cpp  CanetaBluetooth.h
libraries/caneta-rp2040/: CMakeLists.txt
libraries/caneta-rp2040/src/: main.c  tusb_config.h
libraries/caneta-sdl/: CMakeLists.txt  cmake-sdl-config.c.cmake.in
libraries/caneta-sdl/src/: caneta_sdl.cpp  caneta_sdl.h
src/: main.c  tusb_config.h  usb_descriptors.c
